--- a/vue-js/index.html
+++ b/vue-js/index.html
@@ -45,7 +45,7 @@
 
                 <div class="search-chat">
                     <i class="fas fa-search"></i>
-                    <input type="text" placeholder="Cerca o inizia una nuova chat" class="research-chat">
+                    <input type="text" placeholder="Cerca o inizia una nuova chat" class="research-chat" v-model="researchContact">
                 </div>
 
                 <div class="container-contacts">
